--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.8"
   },
   "devDependencies": {
